src/webapp/app/app.css
*{
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}


.grid-container{
  display: grid;
  grid-template-areas:
  'nav nav nav nav nav nav'
  'hd hd hd hd share share'
  'left main main main main right'
  'dash dash dash dash dash dash'
  'footer footer footer footer footer footer'
  ;
  grid-gap: 10px;
  background-color: whitesmoke;
}

.grid-container > div {
  background-color: rgba(255, 255, 255, 0.8);
  text-align: center;
}

/* Main sections */
.top-nav{
  grid-area: nav;
  background: purple;
  color: white;
  font-weight: bolder;
  padding: 2em;
}

.header{
  grid-area: hd;
  background: white;
  padding: 1em 2em;
}

.social{
  grid-area: share;
  padding: 0.5em;
}

.social-icon{
  font-size: 1.5em;
  transition: all 50ms ease-out;
}

.social-icon:hover{
  font-size: 2em;
  color: purple
}

.main-content{
  grid-area: main;
  text-align: center;
  margin: 2em auto;
  padding: 0.5em;
}

/* Roster gen form */
.centered-form{
  background-color: whitesmoke;
  display: grid;
  grid-row-gap: 0.5em;
  padding: 1em;
 }
 
 input{
   padding: 1em;
   border: none;
   border-radius: 1.5em;
 }
 
 input::focus{
  border-radius: 1.5em;
 }
 
 hr{
   width: 40%;
   background: pink;
 }
 
 button{
  padding: 1em;
  border: 1px solid purple;
  background: purple;
  border-radius: 0.5em;
  color: white;
 }
 
 .fa-plus-circle{
   font-size: 2em;
 }
/* End */

.dashboard{
  grid-area: dash;
  background: navy;
}
/* ..End main sections */

